--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,11 @@
 .input {
-  width: 98%;
-  height: 40px;
+  width: 50%;
+  height: 30px;
   border: 1px solid #ccc;
-  border-radius: 4px;
+  border-radius: 10px;
   justify-content: center;
+  margin-bottom: 25px;
+  margin-top: 20px;
 }
 .container-topo {
   display: flex;
