--- a/src/Components/ContainerEmoji/style.css
+++ b/src/Components/ContainerEmoji/style.css
@@ -1,12 +1,21 @@
+body {
+  display: flex;
+  justify-content: center;
+  background-color: rgba(245, 245, 245, 0.781);
+}
+
 .container-um {
-  margin-top: 10px;
+  margin-top: 20px;
+  margin-bottom: 20px;
   padding: 10px;
   height: 40px;
   width: 100%;
   display: flex;
-  border-top: 1px solid #ccc;
   border-bottom: 1px solid #ccc;
+  border-radius: 20px;
   cursor: pointer;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.11);
+  background-color: white;
 }
 .imagem {
   margin-left: 10px;
